--- a/src/plots_notebooks/violin_plots.ipynb
+++ b/src/plots_notebooks/violin_plots.ipynb
@@ -30,7 +30,7 @@
    "outputs": [],
    "source": [
     "# Project imports\n",
-    "from common import *"
+    "from src.common import *"
    ]
   },
   {
