Add violin plots notebook

--- a/src/plots_notebooks/violin_plots.py.ipynb
+++ b/src/plots_notebooks/violin_plots.py.ipynb
@@ -25,13 +25,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
+   "execution_count": null,
    "outputs": [],
    "source": [
-    "# Project imports\n",
-    "from src.common import *"
-   ]
+    "# Functions\n",
+    "def read_megares_ontology(config):\n",
+    "    # Create ontology dictionary from MEGARes ontology file\n",
+    "    megares_ontology = dict()\n",
+    "    hierarchy_dict = dict()\n",
+    "    with open(config['DATABASE']['MEGARES_ONTOLOGY'], 'r') as ontology_tsv:\n",
+    "        ontology_reader = csv.reader(ontology_tsv)\n",
+    "        for row in ontology_reader:\n",
+    "            # Skip column names\n",
+    "            if row[0] == \"header\":\n",
+    "                continue\n",
+    "\n",
+    "            cl = row[1]\n",
+    "            mech = row[2]\n",
+    "            group = row[3]\n",
+    "\n",
+    "            # Set up hiearachy dict. This will be our tree structure\n",
+    "            if not cl in hierarchy_dict:\n",
+    "                hierarchy_dict[cl] = {}\n",
+    "\n",
+    "            if not mech in hierarchy_dict[cl]:\n",
+    "                hierarchy_dict[cl][mech] = []\n",
+    "\n",
+    "            if not group in hierarchy_dict[cl][mech]:\n",
+    "                hierarchy_dict[cl][mech].append(group)\n",
+    "\n",
+    "            # FIll in our dict\n",
+    "            megares_ontology[row[0]] = {\"class\": cl,\n",
+    "                                        \"mechanism\": mech,\n",
+    "                                        \"group\": group\n",
+    "                                        }\n",
+    "    return megares_ontology, hierarchy_dict"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Get info\n",
+    "config_file = snakemake.input[0]\n",
+    "\n",
+    "ouput_plot = snakemake.output[0]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
@@ -40,10 +92,7 @@
    "outputs": [],
    "source": [
     "# Megares hierarchy\n",
-    "config = dict()\n",
-    "config['DATABASE'] = dict()\n",
-    "config['DATABASE']['MEGARES'] = '/blue/boucher/marco.oliva/data/MEGARes/V2/megares_full_database_v2.00.fasta'\n",
-    "config['DATABASE']['MEGARES_ONTOLOGY'] = '/blue/boucher/marco.oliva/data/MEGARes/V2/megares_modified_annotations_v2.00.csv'\n",
+    "config = snakemake.input[0]\n",
     "\n",
     "megares_ontology, hierarchy_dict = read_megares_v2_ontology(config)\n",
     "\n",
@@ -397,21 +446,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "UFRC Python-3.8",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python3-3.8-ufrc"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "name": "python3"
   }
  },
  "nbformat": 4,
