--- a/src/plots_notebooks/colocalizations_notebook.py.ipynb
+++ b/src/plots_notebooks/colocalizations_notebook.py.ipynb
@@ -2,21 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import csv\n",
-    "import json"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [
     "import seaborn as sns\n",
     "import csv\n",
+    "import json\n",
     "from matplotlib import pyplot as plt\n",
     "from matplotlib.patches import Rectangle"
    ],
@@ -29,8 +20,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
    "source": [
     "def read_megares_v2_ontology(config):\n",
     "    # Create ontology dictionary from MEGARes ontology file\n",
@@ -74,7 +63,9 @@
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
